Port old head pan/tilt and laser tilt controllers to new controller arch.

--- a/arrg/ua_controllers/wubble_controllers/mainpage.dox
+++ b/arrg/ua_controllers/wubble_controllers/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b wubble_camera_pan_tilt_controller is ... 
+\b wubble_controllers is ... 
 
 <!-- 
 Provide an overview of your package.
