--- a/trunk/arrg/ua_drivers/ax12_driver_core/scripts/README
+++ b/trunk/arrg/ua_drivers/ax12_driver_core/scripts/README
@@ -4,4 +4,6 @@ Current Contents:
 
     - set_torque.py -- use to turn motor torque on/off
     - change_id.py -- use to change the id of a single motor
+	- set_angle_limits.py -- use to change angle limits of a single motor
+	- info_dump.py -- use to print out information for connected motors
 
