Edited wiki page through web user interface.

--- a/wiki/WubbleRobot.wiki
+++ b/wiki/WubbleRobot.wiki
@@ -42,6 +42,15 @@ Packages:
   * [http://www.ros.org/wiki/videre_stoc videre_stoc]
   * [http://www.ros.org/wiki/stoc_publisher stoc_publisher]
 
+==Hokuyo URG (Laser Range Finder)==
+
+<img src="http://www.acroname.com/robotics/parts/R325-URG-04LX-UG01.jpg" height="100"/>
+
+[http://www.acroname.com/robotics/parts/R325-URG-04LX-UG01.html Description]
+
+Packages:
+  * [http://www.ros.org/wiki/houkyo_urg_description houkyo_urg_description]
+
 ==Crust Crawler Smart Arm==
 
 <img src="http://www.crustcrawler.com/products/smartarm/images/bigGrip2FingerLarge.jpg" height="100"/> 
@@ -52,13 +61,25 @@ Packages:
   * [http://www.ros.org/wiki/smart_arm_description smart_arm_description]
   * [http://www.ros.org/wiki/smart_arm_controller smart_arm_controller]
   * [http://www.ros.org/wiki/smart_arm_kinematics smart_arm_kinematics]
-  * [http://www.ros.org/wiki/ax12_driver_core ax12_driver_core]
 
-==Hokuyo URG (Laser Range Finder)==
+==Robotis AX-12+ Servos==
 
-<img src="http://www.acroname.com/robotics/parts/R325-URG-04LX-UG01.jpg" height="100"/>
+<img src="http://www.crustcrawler.com/motors/AX12/images/AX_12.jpg" height=100/>
 
-[http://www.acroname.com/robotics/parts/R325-URG-04LX-UG01.html Description]
+[http://www.robotis.com/zbxe/dynamixel_en Description]
 
 Packages:
-  * [http://www.ros.org/wiki/houkyo_urg_description houkyo_urg_description]
+  * [http://www.ros.org/wiki/ax12_driver_core ax12_driver_core]
+  * [http://www.ros.org/wiki/ax12_controller_core ax12_controller_core]
+
+==Prosilica GC1600CH GigE Vision camera==
+
+<img src="http://www.prosilica.com/images/cameras/GC_back_400x254.jpg" height=100/>
+
+[http://www.prosilica.com/products/gc1600h.html Description]
+
+Packages:
+  * [http://www.ros.org/wiki/prosilica_gige_sdk prosilica_gige_sdk]
+  * [http://www.ros.org/wiki/prosilica_camera prosilica_camera]
+  * [http://www.ros.org/browse/details.php?name=ua_overhead_cam ua_overhead_cam]
+  * [http://www.ros.org/browse/details.php?name=background_filters background_filters]
