simulator_state replaces old simulator_experiments, and provides a state publisher for gazebo that also computes certain relations

--- a/arrg/ua_experimental/simulator_state/mainpage.dox
+++ b/arrg/ua_experimental/simulator_state/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b simulator_experiments is ... 
+\b wubble_gazebo_plugins is ... 
 
 <!-- 
 Provide an overview of your package.
