--- a/trunk/arrg/ua_experimental/simulator_state/mainpage.dox
+++ b/trunk/arrg/ua_experimental/simulator_state/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b simulator_experiments is ... 
+\b wubble_gazebo_plugins is ... 
 
 <!-- 
 Provide an overview of your package.
