--- a/stacks/dynamixel_motor/trunk/dynamixel_controllers/mainpage.dox
+++ b/stacks/dynamixel_motor/trunk/dynamixel_controllers/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b ax12_controller_core is ... 
+\b dynamixel_controllers is ... 
 
 <!-- 
 Provide an overview of your package.
