--- a/wiki/Wubble2Robot.wiki
+++ b/wiki/Wubble2Robot.wiki
@@ -7,48 +7,52 @@
 
 ===Wubble Head===
 
-* Microsoft Kinect
-
-** [http://www.amazon.com/Kinect-Sensor-Adventures-Xbox-360/dp/B002BSA298 $149.99]
-
-* Dynamixel EX-106+
-
-** [http://www.trossenrobotics.com/dynamixel-ex-106-robot-actuator.aspx $499.00]
-
-* EX-106H45
-
-** [http://www.trossenrobotics.com/store/p/6285-Custom-Frame-OF-106H45-Set.aspx $54.99]
-
-* Side frame mount RX-64/EX-106+
-
-** [http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR05-S101K-Side-Frame-Set.aspx $14.90]
-
-|| *Quantity* ||~ Description ||~ Price ||~ Link ||
-|| 1 || Microsoft Kinect || 149.99 || [http://www.amazon.com/Kinect-Sensor-Adventures-Xbox-360/dp/B002BSA298 Amazon] ||
-
-{| class="wikitable"
-|-
-! Quantity
-! Part
-! Part Description
-! Source
-! Cost
-|-
-| Head
-| 
-| 
-|
-|
-|-
-| row 2, cell 1
-| row 2, cell 2
-| row 2, cell 3
-|
-|
-|-
-| row 3, cell 1
-| row 3, cell 2
-| row 3, cell 3
-|
-|
-|}
+|| *Quantity* || *Part* || *Part Description* || *Source* || *Cost/Part* || *Cost* || *Total Platform Cost* || 
+|| *Head* || ** || ** || ** || ** || ** || ** || 
+|| 1 || Kinect || Microsoft Kinect || http://www.amazon.com/Kinect-Sensor-Adventures-Xbox-360/dp/B002BSA298 || $149.99 || $ || $ || 
+|| 1 || EX-106+ || Dynamixel Motor || http://www.trossenrobotics.com/dynamixel-ex-106-robot-actuator.aspx || $499.0 || $ || $ || 
+|| 1 || EX-106H45 || 45 degree offset hinge for joints || http://www.trossenrobotics.com/store/p/6285-Custom-Frame-OF-106H45-Set.aspx || $54.99 || $ || $ || 
+|| 1 || Side frame mount RX-64/EX-106+ || Side Frame Set provides a mounting pattern on the side or bottom of RX-64 & EX-106+ Dynamixels. || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR05-S101K-Side-Frame-Set.aspx || $14.9 || $ || $ || 
+|| *Neck* || ** || ** || ** || ** || ** || *Neck Subtotal* || 
+|| 1 || MicroStrain IMU || 3DM-GX3-25-USB-SK1 || http://www.microstrain.com/inertial/3dm-gx3-25 || $1895.0 || $ || $ || 
+|| 1 || D-Link Access Point || D-Link DAP-2553 || http://www.amazon.com/D-Link-DAP-2553-Premier-Selectable-802-11n/dp/B001P817YO/ref=sr_1_1?ie=UTF8&qid=1323191080&sr=8-1 || $153.99 || $ || $ || 
+|| 1 || MX-28 || Dynamixel Motor || http://www.trossenrobotics.com/dynamixel-mx-28-robot-actuator.aspx || $219.9 || $ || $ || 
+|| 1 || RX-24F/RX-28 Hinge Frame Set || RX-24F/RX-28 FR07-H101K Hinge Frame Set || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR07-H101K-Hinge-Frame-Set.aspx || $27.9 || $ || $ || 
+|| 1 || RX-24F/RX-28 Side Frame Set || RX-24F/RX-28 FR07-S101K Side Frame Set || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR07-S101K-Frame-Set.aspx || $11.9 || $ || $ || 
+|| 1 || Hokuyo 2D Laser || R325-URG-04LX-UG01 || http://www.acroname.com/robotics/parts/R325-URG-04LX-UG01.html || $1175.0 || $ || $ || 
+|| *Lid* || ** || ** || ** || ** || ** || *Lid Subtotal* || 
+|| 2 || Phidgets Interface Kit w/ USB Hub || The PhidgetInterfaceKit 8/8/8 with 6 Port USB Hub || http://www.trossenrobotics.com/p/phidgets-888-with-usb-hub.aspx || $121.75 || $ || $ || 
+|| 1 || Microphone || MXL USB .007 Stereo Microphone || http://www.mxlmics.com/products/USB/USB_007/USB_007.html || $249.95 || $ || $ || 
+|| 3 || USB Right angle 4" || USB Right angle extension cable ||  || $12.0 || $ || $ || 
+|| 1 || ExpressCard to USB and Firewire ||  ||  || $36.0 || $ || $ || 
+|| 1 || Hokuyo 2D Laser || R283-HOKUYO-LASER1 || http://www.acroname.com/robotics/parts/R283-HOKUYO-LASER1.html || $2375.0 || $ || $ || 
+|| 1 || 80/20 Frame || 80/20 Custom pieces  || http://www.8020.net/T-Slot-1.asp || $217.38 || $ || $ || 
+|| *Arm* || ** || ** || ** || ** || ** || *Arm Subtotal* || 
+|| 6 || EX-106+ || Dynamixel Motor || http://www.trossenrobotics.com/dynamixel-ex-106-robot-actuator.aspx || $499.0 || $ || $ || 
+|| 3 || RX-64 || Dynamixel Motor || http://www.trossenrobotics.com/dynamixel-rx-64-robot-actuator.aspx || $279.9 || $ || $ || 
+|| 2 || RX-28 || Dynamixel Motor || http://www.trossenrobotics.com/dynamixel-rx-28-robot-actuator.aspx || $209.9 || $ || $ || 
+|| 3 || EX-106H45 || 45 degree offset hinge for joints || http://www.trossenrobotics.com/store/p/6285-Custom-Frame-OF-106H45-Set.aspx || $54.99 || $ || $ || 
+|| 1 || RX-64HXL || Custom Frame OF-64HXL || http://www.trossenrobotics.com/store/p/6276-Custom-Frame-OF-64HXL-Set.aspx || $54.99 || $ || $ || 
+|| 3 || RX-64 Back Frame Set || RX-64 FR05-B101K Back Frame Set || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR05-B101K-Back-Frame-Set.aspx || $31.9 || $ || $ || 
+|| 4 || Side frame mount RX-64/EX-106+ || RX-64/EX-106+ FR05-S101K Side Frame Set || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR05-S101K-Side-Frame-Set.aspx || $14.9 || $ || $ || 
+|| 1 || EX-106+ Adapter Frame Set || EX-106+ FR08-D101K Adapter Frame Set || http://www.trossenrobotics.com/p/Robotis-Dynamixel-FR08-D101K-Adapter-Frame-Set.aspx || $44.9 || $ || $ || 
+|| 1 || Anton Inc. arm bracket || Custom 4" Aluminum upper arm bone ||  || $190.0 || $ || $ || 
+|| 1 || Anton Inc. 2 x RX-28 mount || Custom RX-28 Side Frame Mount ||  || $162.5 || $ || $ || 
+|| 1 || Anton Inc. 2 x EX-106+ mount || Anton Inc. 2 x EX-106+ robotic arm mount to 80/20 1010 ||  || $200.0 || $ || $ || 
+|| 2 || AX-12 Dual Gripper Hardware Kit || AX-12 Dual Gripper Hardware Kit || http://www.crustcrawler.com/products/smartarm/index.php?prod=12&tab=accessories || $69.0 || $ || $ || 
+|| 8 || Phidgets FSR Kit || Phidgets Force Sensing Resistors (FSR) Kit || http://www.trossenrobotics.com/5i-Force-Sensing-Resistor-Kit.aspx || $14.95 || $ || $ || 
+|| 1 || IR Distance Sensor || GP2D12 Alternative IR Distance Sensor Kit (4-30 Inch) || http://www.trossenrobotics.com/store/p/5430-GP2D12-Alternative-IR-Distance-Sensor-Kit-4-30-Inch-1-sensor.aspx || $23.7 || $ || $ || 
+|| *Computer* || ** || ** || ** || ** || ** || ** || 
+|| 1 || ThinkPad X201 || 3249CTO || http://shop.lenovo.com/us/laptops/thinkpad/x-series/x201 || $1769.0 || $ || $ || 
+|| *Platform* || ** || ** || ** || ** || ** || ** || 
+|| 1 || Erratic Mobile Robot Platform || Videre Erratic Mobile Robot Platform || http://www.videredesign.com/ || $1550.0 || $ || $ || 
+|| *Base* || ** || ** || ** || ** || ** || *Base Subtotal* || 
+|| 1 || DC-DC 12V Converter || CONVERTER DC/DC 12V 8.3A 100W || http://search.digikey.com/scripts/DkSearch/dksus.dll?lang=en&site=us&keywords=VHK100W-Q24-S12 || $158.19 || $ || $ || 
+|| 3 || USB-RS485 || Devantech R305-USB-RS485 || http://www.acroname.com/robotics/parts/R305-USB-RS485.html || $29.5 || $ || $ || 
+|| 1 || USB Dynamixel INTERFACE BOARD || USB BUS INTERFACE BOARD || http://www.huvrobotics.com/shop/index.php?_a=viewProd&productId=5 || $60.0 || $ || $ || 
+|| 1 || Phidgets Dual SSR Relay || Contains 2 relays for switching up to 9 Amps at up to 40 Volts DC, or 28 Volts AC || http://www.trossenrobotics.com/p/phidgets-dual-ssr-relay.aspx || $30.9 || $ || $ || 
+|| 1 || Phidgets InterfaceKit 8/8/8 || Phidgets InterfaceKit 8/8/8 || http://www.trossenrobotics.com/p/phidgets-888.aspx || $77.95 || $ || $ || 
+|| *Parts (Not in use)* || ** || ** || ** || ** || ** || ** || 
+|| 1 || Swissranger || Mesa Swissranger R329-SR4000-10M-USB || http://www.acroname.com/robotics/parts/R329-SR4000-10M-USB.html || $4295.0 || $ || $ || 
+|| 0 || DC-DC 15V Converter || VHK150W-Q24-S15 || http://products.cui.com/adtemplate_child.asp?brand=v-infinity&p=614421&c=690212&catky=328060&subcatky1=273602&subcatky2=530574# || $172.52 || $ || $ || 
+|| 0 || 10lb Lead Weight || Aqua Black Vinyl Coated Lead Weights || http://www.amazon.com/Aqua-Black-Vinyl-Coated-Weights/dp/B001P61RWI || $38.98 || $ || $ || 
